gcc/testsuite/rust/rustc/ui/issues/issue-43926.rs
#[link(name="foo", cfg())] // { dg-error "" "" { target *-*-* } }
extern {}

fn main() {}

